--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.0.10",
+    "@radix-ui/react-select": "^1.2.2",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
@@ -17,13 +18,18 @@
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
     "firebase": "^9.22.2",
+    "firebase-admin": "^11.9.0",
     "next": "13.4.6",
     "next-auth": "^4.22.1",
+    "openai": "^3.3.0",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-hot-toast": "^2.4.1",
+    "react-loader-spinner": "^5.3.4",
+    "react-select": "^5.7.3",
+    "swr": "^2.1.5",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
   }
